--- a/src/Components/Musicstyle/_player.scss
+++ b/src/Components/Musicstyle/_player.scss
@@ -16,7 +16,7 @@
 }
 
 .time-control {
-  width: 40%;
+  width: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,22 +29,23 @@
   }
 
   p {
-    padding: 1rem;
+    color: white;
+    padding: 0.5rem;
   }
 }
 
 .play-control {
-  width: 30%;
+  width: 40%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   svg {
     cursor: pointer;
-    color: $primary-text-color;
+    color: white;
 
     &:hover {
-      color: $primary-light-color;
+      color: black;
     }
   }
 }
@@ -67,7 +68,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .track {
-  background: lightblue;
+  background: white;
   width: 100%;
   height: 0.5rem;
   position: relative;
@@ -76,7 +77,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 .animate-track {
-  background: rgb(204, 204, 204);
+  background: white;
   width: 100%;
   height: 100%;
   position: absolute;
